# msserialization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/: README.md
MsSceneDesigner/msserialize/: msarchive.hpp  msarchive_qt.hpp  msdatanode.hpp  msjsonnodeapt_qt.hpp  msnodeapt_qt.hpp  qjsonnode.hpp  qtreeitemnode.hpp
demo/: CMakeLists.txt
demo/qjson/: CMakeLists.txt  qjson.cpp
demo/rajson/: CMakeLists.txt  rajson.cpp
include/msadapter/: msrajsonadapter.hpp  pojsonserializer.hpp  qjsonserializer.hpp  qxmlserializer.hpp  rajsonserializer.hpp  raxmlserializer.hpp
include/msserialize/: cplusplusmacros.h  functionhelper.hpp  msarchive.hpp  msarchive_cv.hpp  msarchive_qt.hpp  msarchive_stl.hpp  msbasetypeapt.hpp  msbasetypeapt_qt.hpp  msnodeapt.hpp  msnodeapt_qt.hpp  msnodeapt_stl.hpp  msscenedef.h  mssceneelem.hpp  pojsonnode.hpp  qjsonnode.hpp  qxmlnode.hpp  rajsonnode.hpp  raxmlnode.hpp  siexse.hpp
msserialize/: msnodeapt.hpp  msscenedef.h  test.cpp
test/: CMakeLists.txt
test/qjson/: qjson.cpp
test/rajson/: rajson.cpp
unittest/: CMakeLists.txt  rajson_test.cpp
